<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:visibility="gone"
    android:id="@+id/g_mundos">

    <ImageView
        android:id="@+id/marcador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="-100dp"
        android:src="@drawable/pulse" />

    <TextView
        android:background="@color/white"
        android:id="@+id/texto_mundos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/guia_mundos"
        android:layout_marginBottom="100dp"
        android:visibility="gone">

    </TextView>
    <Button
        android:id="@+id/boton_continuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:text="@string/boton_seguir" />
    <Button
        android:id="@+id/boton_salir"
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:text="@string/boton_salir" />
</FrameLayout>