<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/navigation_characters">

    <fragment
        android:id="@+id/navigation_worlds"
        android:name="dam.pmdm.spyrothedragon.ui.WorldsFragment"
        android:label="@string/worlds"
        tools:layout="@layout/fragment_worlds" >
        <action

            android:id="@+id/action_characters_to_coleccion"
            app:destination="@id/navigation_collectibles"
            app:enterAnim="@transition/transicion_guia">

        </action>

    </fragment>

    <fragment
        android:id="@+id/navigation_characters"
        android:name="dam.pmdm.spyrothedragon.ui.CharactersFragment"
        android:label="@string/characters"
        tools:layout="@layout/fragment_characters">
        <action
            android:id="@+id/action_worlds_to_coleccion"
            app:destination="@id/navigation_worlds"
            app:enterAnim="@transition/transicion_guia">

        </action>

    </fragment>

    <fragment
        android:id="@+id/navigation_collectibles"
        android:name="dam.pmdm.spyrothedragon.ui.CollectiblesFragment"
        android:label="@string/collectibles"
        tools:layout="@layout/fragment_collectibles" />
    <fragment
        android:id="@+id/videoFragment"
        android:name="dam.pmdm.spyrothedragon.ui.VideoFragment"
        android:label="fragment_video"
        tools:layout="@layout/fragment_video" />
</navigation>