<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/pantalla1"
    android:background="@drawable/fondo_color"
    android:visibility="gone">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <TextView
        android:id="@+id/bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:layout_marginTop="30dp"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_inicial"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:paddingHorizontal="30dp"
        android:gravity="center"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:contentDescription="Logo"
        android:src="@drawable/letters"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_inicial_bajo"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:paddingHorizontal="30dp"
        android:gravity="center"
        android:layout_marginTop="10dp"/>


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">


        <ImageButton
            android:id="@+id/btnPlay"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:scaleType="fitCenter"
            android:background="@null"
            android:src="@drawable/gems" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comenzar"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
           />
    </FrameLayout>

</LinearLayout>


</FrameLayout>
