<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/g_pantallafinal"
    android:clickable="true"
    android:focusable="true"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:background="@drawable/fondo_color"
        android:gravity="center_horizontal"
        >

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pantalla_final_titulo"
            android:layout_marginTop="30dp"
            android:textSize="50sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resumen_guia"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:paddingHorizontal="30dp"
            android:gravity="center"
            android:layout_marginTop="100dp" />


        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:contentDescription="Logo"
            android:src="@drawable/letters"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/boton_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_comenzar" />





    </LinearLayout>

</FrameLayout>